--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ entrega_7/node_modules
 entrega_8/node_modules
 entrega_9/node_modules
 entrega_9/public/imgs/*
+
+node_modules
+package-lock.json
+package.json
