--- a/Entrega_11/package.json
+++ b/Entrega_11/package.json
@@ -1,11 +1,17 @@
 {
+  "name": "entrega-11",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.10",
+    "connect-mongodb-session": "^5.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "firebase-admin": "^12.1.0",
-    "morgan": "^1.10.0"
+    "firebase-admin": "^12.1.0"
   }
 }
