--- a/prueba/package.json
+++ b/prueba/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "untitled6",
-  "version": "0.0.0",
-  "private": true,
+  "name": "prueba",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "express": "^4.19.2",
+    "mongoose": "^8.3.2"
   }
 }
