--- a/Entrega_11/package.json
+++ b/Entrega_11/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "entrega-11",
+  "name": "prueba",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-mongodb-session": "^5.0.0",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
-    "firebase-admin": "^12.1.0"
+    "firebase": "^10.11.1",
+    "mongoose": "^8.3.2"
   }
 }
